--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <title> DINO company </title>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="index.css">
+
 </head>
 
-
-
 <body>
-    
+    <nav class="navbar-flex-container"> 
+        <div class="navbar-logo"> DC </div>
+        <ul class="navbar-links"> 
+            <li> <a href="#"> Über uns </li>
+            <li> <a href="#"> Store </li>
+            <li> <a href="#"> Karriere </li>
+            <li> <a href="#"> Lotterien </li>
+        </ul>
+    </nav>
+
 </body>
 
 </html>
