--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 </head>
 
 <body>
-    <nav class="navbar-flex-container"> 
-        <div class="navbar-logo"> DC </div>
-        <ul class="navbar-links"> 
-            <li> <a href="#"> Über uns </li>
-            <li> <a href="#"> Store </li>
-            <li> <a href="#"> Karriere </li>
-            <li> <a href="#"> Lotterien </li>
+    <navbar>
+        <ul class="nav-list">
+            <li class="nav-item"> <a href="#"> DC </a></li>
+            <li class="nav-item"> <a href="#"> Über uns </a></li>
+            <li class="nav-item"> <a href="#"> Store </a></li>
+            <li class="nav-item"> <a href="#"> Karriere </a></li>
+            <li class="nav-item"> <a href="#"> Lotterien </a></li>
         </ul>
-    </nav>
 
 </body>
 
