--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website für DINO company im Rahmen der LV 'Design Studio' ">
-    <meta name="author" content="Jacob Weißenbäck">
-    <title> DINO company </title>
-    <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Website für DINO company im Rahmen der LV 'Design Studio' "
+    />
+    <meta name="author" content="Jacob Weißenbäck" />
+    <title>DINO company</title>
+    <link rel="icon" href="favicon.png" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-</head>
+  <body>
+    <nav class="navbar">
+      <div class="nav-logo">DINO Company</div>
+      <ul class="nav-list">
+        <li><a href="#">Über uns</a></li>
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Karriere</a></li>
+        <li><a href="#">Lotterien</a></li>
+      </ul>
+    </nav>
 
-<body>
-    <navbar>
-        <ul class="nav-list">
-            <li class="nav-item"> <a href="#"> DC </a></li>
-            <li class="nav-item"> <a href="#"> Über uns </a></li>
-            <li class="nav-item"> <a href="#"> Store </a></li>
-            <li class="nav-item"> <a href="#"> Karriere </a></li>
-            <li class="nav-item"> <a href="#"> Lotterien </a></li>
-        </ul>
-
-</body>
-
+  </body>
+  
 </html>
