started diashow and text on mainpage

--- a/index.html
+++ b/index.html
@@ -17,13 +17,43 @@
     <nav class="navbar">
       <div class="nav-logo">DINO Company</div>
       <ul class="nav-list">
-        <li><a href="#">Über uns</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
         <li><a href="#">Karriere</a></li>
         <li><a href="#">Lotterien</a></li>
       </ul>
     </nav>
 
+    <div class="main-container">
+      <!-- Erster Left Container -->
+      <div class="left-container">
+        <div class="top-container">
+          <div class="top-row">
+            <span class="wohnen">Wohnen</span>
+            <span class="schenken">Schenken</span>
+          </div>
+          <div class="bottom-row">
+            <span class="lifestyle">Lifestyle</span>
+          </div>
+        </div>
+        <!-- Zweiter Left Container -->
+        <div class="subtext-container">
+          <div class="subtext">
+            <p>Für dich und dein Zuhause. <br> Alles, was du liebst. </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Right Container mit Slideshow -->
+      <div class="right-container">
+        <div class="slideshow">
+          <img src="https://picsum.photos/1024/1792?random=1" alt="Random Image 1" class="slide"/>
+          <img src="https://picsum.photos/1024/1792?random=2" alt="Random Image 2" class="slide" />
+          <img src="https://picsum.photos/1024/1792?random=3" alt="Random Image 3" class="slide" />
+        </div>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
   </body>
-  
 </html>
