--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="nav-list">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
-        <li><a href="#">Karriere</a></li>
+        <li><a href="karriere.html">Karriere</a></li>
         <li><a href="#">Lotterien</a></li>
       </ul>
     </nav>
@@ -64,6 +64,19 @@
         <img src="https://picsum.photos/760/512?random=3" class="about-picture"/>
       </div>
     </div>
+
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-717a8724-4f91-48b0-bf7b-36d42f8ee417" data-elfsight-app-lazy></div>
+
+    <footer class="footer">
+      <div class="footer-left">
+        <a href="#">Impressum</a>
+        <a href="#">Datenschutz</a>
+      </div>
+      <div class="footer-right">
+        <p>© 2024 DINO company</p>
+      </div>
+    </footer>
 
     <script src="index.js"></script>
   </body>
